# almont-classification

./: .gitattributes  .gitignore  README.md  env.yml  models.dvc  pyproject.toml
.dvc/: config
data/: raw.dvc
docs/: imageHelper.js  index.html
notebook/: 1_eda.ipynb  2_SVM.ipynb  3_CAE_SVM.ipynb  3_CE_SVM.ipynb  3_autoencoder.ipynb  4_CAE_SVM.ipynb  4_CNN_SVM.ipynb
