[project]
name = "almont-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "izzaldev",email = "rizal.fadlullah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torchvision (>=0.24.1,<0.25.0)",
    "torch (>=2.9.1,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "skl2onnx (>=1.19.1,<2.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "onnxruntime (>=1.23.2,<2.0.0)",
    "lightning (>=2.6.0,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.0,<5.0.0)",
    "izlearn (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]
